@startuml
'https://plantuml.com/class-diagram
left to right direction

hide circle
skinparam classAttributeIconSize 0

class RouteHandler {
    +putBook(isbn, title, genre, author, description=None): HttpResult
}

class BookController {
    +updateBook(isbn, title, genre, author, description=None): Result
}

class BookService {
    -validate(book)
    +update(title, genre, author, description=None): Result
    +add(book): Result
}

class Book {
    - isbn,
    - title,
    - genre,
    - authors,
    - description
    Book(isbn, title, genre, authors, description=None)
}

class BookRepository {
    +findById(Id) : Optional<Book>
    +save(book): Result
}

class GenreRepository {
    +findById(Id) : Optional<Genre>
}


class HttpResult {
    -status: HttpStatus
    -result: json
    HttpResult(HttpStatus status, const json &result);
}

class BookViewMapper
{
    + toBookView(book)
}


RouteHandler ..> BookController
BookController ..> BookService
BookController ..> BookViewMapper
BookService ..> BookRepository
BookService ..> GenreRepository
BookService ..> Book
BookRepository ..> BookController
BookController ..> HttpResult

@enduml